added class functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="https://cdn.rawgit.com/google/blockly/master/javascript_compressed.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pouchdb/5.3.1/pouchdb.js"></script>
   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
+  <link rel="stylesheet" href="app.css">
+
 </head>
 <body>
 
